Fixes font color on mobile devices

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -21,7 +21,7 @@ nav {
   height: 47px;
   width: 100%;
   background: #999;
-  opacity: 0.4;
+  opacity: 0.6;
   text-align: center;
   z-index: 1000;
 }
@@ -35,7 +35,7 @@ main {
 .modal-content,
 .modal-footer,
 .modal-header {
-  opacity: 0.7;
+  opacity: 0.9;
   border: 0;
 }
 
@@ -153,7 +153,7 @@ h1 {
 
 h2 {
   color: white;
-  font-family: 'Bungee Hairline', cursive;
+  font-family: 'Cuprum', sans-serif;
   font-size: 20px;
   font-weight: 700;
   opacity: 0.7;
@@ -168,21 +168,25 @@ h4 {
 
 h2.UAtext {
   color: white;
-  font-family: 'Bungee Hairline', cursive;
+  font-family: 'Cuprum', sans-serif;
   font-weight: 700;
-  font-size: 22px;
-  opacity: 0.8;
+  font-size: 25px;
+  opacity: 0.7;
   text-align: center;
 }
 
 p {
   color: white;
-  font-family: 'Bungee Hairline', cursive;
+  font-family: 'Cuprum', sans-serif;
   font-weight: 900;
   font-size: 17px;
   line-height: 44px;
   text-align: center;
-  opacity: 0.8;
+  opacity: .7;
+}
+
+p.defText {
+  font-size: 20px;
 }
 
 input {
@@ -322,11 +326,11 @@ footer {
   }
 
   h2.UAtext {
-    opacity: 1;
+    opacity: .8;
   }
 
   p.defText {
-    opacity: 1;
+    opacity: .8;
   }
 
   .center {
@@ -418,6 +422,7 @@ footer {
 
   p.defText {
     opacity: 1;
+    font-size: 14px;
   }
 
   .center {
